--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
-
+  height:70%;
   width:100%;
 }
 
@@ -35,7 +35,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
@@ -43,6 +43,7 @@ textarea{
   color: #000000;
   border-top: 1px dashed #000000;
   width:100%;
+  bottom:0px;
 }
 
 .past {
@@ -66,11 +67,29 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  height: 85%;
-  width: 85%;
+  height: 80%;
+  width: 90%;
+  bottom: 15%;
+  font-size: 70%;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.container{
+  max-width: 80%;
+}
+
+.col-1{
+  padding: 0 5px;
+}
+
+@media screen and (max-width: 768px){
+  .container{
+      max-width:100%;
+
+  }
+
 }
